동적폼 형태는 아니지만 입력필드들 나타남 단, 오른쪽으로 계속 추가된 형태로 나타남.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       - /app/node_modules  # 볼륨 최적화
     stdin_open: true
     tty: true
+    depends_on:
+      - backend # 백엔드가 먼저 시작되도록 보장
 
   # db:  # MySQL (초기 미사용, 필요시 활성화)
   #   image: mysql:8.0
