동적폼 형태는 아니지만 입력필드들 나타남 단, 오른쪽으로 계속 추가된 형태로 나타남.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,8 @@
-FROM node:18-alpine
+FROM node:16
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
+RUN npm install -g nodemon
 COPY . .
-CMD ["npm", "start"]
+EXPOSE 5000
+CMD ["npx", "nodemon", "server.js"]
