--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   backend:
     build: ./backend
+    env_file:
+      - ./backend/.env
     ports:
       - "5000:5000"  # Express 서버 포트
     volumes:
@@ -13,6 +15,8 @@ services:
 
   frontend:
     build: ./frontend
+    env_file:
+      - ./frontend/.env
     ports:
       - "3000:3000"  # React 개발 서버
     volumes:
