--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "clipboard-copy": "^4.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
