* Ver01 - production build

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-ALLOWED_ORIGINS=http://localhost:3000,http://192.168.0.16:3000,https://myapp.onrender.com
+ALLOWED_ORIGINS=http://localhost:3000,https://www.ics.kr,https://moodle.icsportals.org/my/courses.php
+NODE_ENV=production
